After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 696053 - Tile previews are shown above the focus window
Tile previews are shown above the focus window
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2013-03-18 11:56 UTC by Florian Müllner
Modified: 2013-03-18 15:21 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
window: Force NORMAL layer for tile preview (1.18 KB, patch)
2013-03-18 11:56 UTC, Florian Müllner
committed Details | Review

Description Florian Müllner 2013-03-18 11:56:34 UTC
This is a regression from moving override-redirect windows to a separate window group, see patch.
Comment 1 Florian Müllner 2013-03-18 11:56:36 UTC
Created attachment 239118 [details] [review]
window: Force NORMAL layer for tile preview

The tile preview is expected to be shown underneath the focus window.
However the code that restacks the preview broke when override-redirect
windows were moved to a separate window group.
To fix, special-case tile previews to put them in the NORMAL layer.
Comment 2 Rui Matos 2013-03-18 15:15:37 UTC
Review of attachment 239118 [details] [review]:

Looks good
Comment 3 Rui Matos 2013-03-18 15:16:31 UTC
Review of attachment 239118 [details] [review]:

Looks good
Comment 4 Florian Müllner 2013-03-18 15:21:39 UTC
Attachment 239118 [details] pushed as 884ab60 - window: Force NORMAL layer for tile preview